--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Vehiculos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        .container{
+            width: 400px;
+        }
+        h1{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
+
+    <div class="container">
+        <form th:action="@{/rueditas/search}" method="post">
+            <div class="mt-5 mb-4">
+                <h1>Rueditas</h1>
+            </div>
+            <div class="alert alert-danger" role="alert" th:if="${rueditasModel.codigo != '00'}">
+                <span th:text="${rueditasModel.mensaje}"></span>
+            </div>
+            <div class="mb-3">
+                <p for="placa" class="form-label">Placa del vehículo:</p>
+                <input type="text" id="placa" name="placa" placeholder="Ingrese la placa del vehiculo"
+                       class="form-control form-control-lg" required>
+            </div>
+            <div class="d-grid">
+                <button type="submit" class="btn btn-primary btn-lg">Buscar</button>
+            </div>
+
+        </form>
+    </div>
 
 </body>
 </html>
