--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -5,6 +5,7 @@
     <title>Vehiculos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/inicio.css}">
     <style>
         .container{
             width: 400px;
@@ -12,22 +13,27 @@
         h1{
             text-align: center;
         }
+        .fade-out {
+            transition: opacity 1s ease-out;
+            opacity: 0;
+        }
+
     </style>
 </head>
 <body>
 
     <div class="container">
-        <form th:action="@{/rueditas/search}" method="post">
+        <form th:action="@{/rueditas/resultado}" method="post">
             <div class="mt-5 mb-4">
                 <h1>Rueditas</h1>
             </div>
-            <div class="alert alert-danger" role="alert" th:if="${rueditasModel.codigo != '00'}">
+            <div class="alert alert-danger" id="message" role="alert" th:if="${rueditasModel.codigo != '00'}"  style="display: none;">
                 <span th:text="${rueditasModel.mensaje}"></span>
             </div>
             <div class="mb-3">
                 <p for="placa" class="form-label">Placa del vehículo:</p>
                 <input type="text" id="placa" name="placa" placeholder="Ingrese la placa del vehiculo"
-                       class="form-control form-control-lg" required>
+                       class="form-control form-control-lg">
             </div>
             <div class="d-grid">
                 <button type="submit" class="btn btn-primary btn-lg">Buscar</button>
@@ -37,4 +43,23 @@
     </div>
 
 </body>
+<script>
+    // Muestra el mensaje y lo oculta después de 5 segundos
+    window.onload = function() {
+        const messageDiv = document.getElementById("message");
+        if (messageDiv) {
+            messageDiv.style.display = "block"; // Muestra el mensaje
+            setTimeout(function() {
+                // Aplica la clase de fade-out para iniciar la animación
+                messageDiv.classList.add("fade-out");
+
+                // Después de 1 segundo (la duración de la animación), oculta el div completamente
+                setTimeout(function() {
+                    messageDiv.style.display = "none";
+                }, 1000); // Coincide con el tiempo de transición en CSS
+            }, 5000); // Espera 5 segundos antes de empezar la animación
+        }
+    };
+
+</script>
 </html>
